--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,12 @@ python-dotenv
 gtts
 pygame
 psycopg2-binary
+transformers>=4.36.0
+torch>=2.0.0
+datasets>=2.14.0
+accelerate>=0.24.0
+bitsandbytes>=0.41.0
+peft>=0.5.0
+sentencepiece>=0.1.99
+evaluate>=0.4.0
+tensorboard>=2.14.0
